force-app/main/default/objects/lw_docgen__Impact_Analysis_Report__c/lw_docgen__Impact_Analysis_Report__c.object-meta.xml
<CustomObject>
    <description>Tracks the execution of an individual report within an impact analysis run.</description>
    <label>Impact Analysis Report</label>
    <nameField>
        <displayFormat>IAR-{0000}</displayFormat>
        <label>Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impact Analysis Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>