force-app/main/default/objects/lw_docgen__Impact_Analysis_Report__c/fields/lw_docgen__Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>lw_docgen__Execution_Order__c</fullName>
    <description>Order in which this report was executed within the run.</description>
    <label>Execution Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>