force-app/main/default/objects/lw_docgen__Impact_Analysis_Report__c/fields/lw_docgen__Report_Configuration__c.field-meta.xml
<CustomField>
    <fullName>lw_docgen__Report_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The report configuration that was tested.</description>
    <label>Report Configuration</label>
    <referenceTo>lw_docgen__Report_Configuration__c</referenceTo>
    <relationshipLabel>Impact Analysis Reports</relationshipLabel>
    <relationshipName>Impact_Analysis_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>