force-app/main/default/objects/lw_docgen__Impact_Analysis_Report__c/fields/lw_docgen__Report_Configuration_Name__c.field-meta.xml
<CustomField>
    <fullName>lw_docgen__Report_Configuration_Name__c</fullName>
    <description>Snapshot of the report configuration name at the time of the run.</description>
    <label>Report Configuration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>