force-app/main/default/objects/lw_docgen__Impact_Analysis_Report__c/listViews/lw_docgen__All.listView-meta.xml
<ListView>
    <fullName>lw_docgen__All</fullName>
    <columns>NAME</columns>
    <columns>lw_docgen__Impact_Analysis_Run__c</columns>
    <columns>lw_docgen__Report_Configuration_Name__c</columns>
    <columns>lw_docgen__Status__c</columns>
    <columns>lw_docgen__Start_Time__c</columns>
    <columns>lw_docgen__End_Time__c</columns>
    <columns>lw_docgen__Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>